--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,12 @@
   /* display: flex;
   align-items: center;
   justify-content: center; */
+  display: flex;
+  flex: 1;
   height: 100vh;
   flex-direction: column;
   background: #eee;
+  overflow: hidden;
 }
 
 .editor {
